web: the Resources.Config.addTextFile method #791
Closes #791

$source=83eb3cd71e35db93180d7d6c0ae5e322b45b8953$